#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-05-29-1: Enhancem.:  appcert test now adds information of used host
                 Review:     DG

DG-2009-05-29-0: Bugfix:     TCL error when changing cluster config on 
                             additional testsuite configs. 
                 Review:     CR 

CR-2009-05-29-0: Bugfix:     o install problem which results in failure of issue
                               tests 2459 and 1330
                             o install core system test now will verify that jvm
                               thread is running if enabled
                 Review:     RD

CR-2009-05-27-2: Bugfix:     fixed upgrade_test
                 Review:     MD

CR-2009-05-27-1: Bugfix:     fixed jemalloc test which fails for qmon -help when
                             libXm is not installed
                 Review:     SH

CR-2009-05-27-0: Bugfix:     tight_integration_job_finished() job_state "unkown"
                             is not an indication that job is finished anymore.
                             This might be the reason why tight_integration test
                             sometimes reports "only x of y jobs finished" and
                             failed.
                 Review:     DG

RH-2009-05-26-0: Enhancem.:  Hedeby: new test for issue 656
                 Review:     MG

AP-2009-05-25-0: Bugfix:     fixed broken ARCo installation
                 Belongs to: AP-2009-05-21-0
                 Review:     JF

MD-2009-05-25-0: Bugfix:     fixed broken installer messages
                 Belongs to: MD-2009-05-22-0
                 Review:     CR
