@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+AP-2009-06-01-0: Bugfix:     fix of broken tests (bigdecimal, path_alias, 2876)
+                 Belongs to: AP-2009-05-21-0
+                 Review:     JF
+
 CR-2009-05-29-1: Enhancem.:  appcert test now adds information of used host
                  Review:     DG
 
